United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6989669 Coops: -Xshare:dump causes crash
6989669 : Coops: -Xshare:dump causes crash

Details
Type:
Bug
Submit Date:
2010-10-05
Status:
Resolved
Updated Date:
2011-04-21
Project Name:
JDK
Resolved Date:
2010-11-12
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
Generating shared archive with coops enabled causes crash:
$ ./bin/java -d64 -XX:+UseCompressedOops -Xshare:dump
Loading classes to share ... done. 
Rewriting and unlinking classes ... done. 
Calculating hash values for String objects .. done. 
Calculating fingerprints ... done. 
Removing unshareable information ... done. 
Moving pre-ordered read-only objects to shared space at 0x00000007fe200000 ... done. 
Moving read-only objects to shared space at 0x00000007fe78edd0 ... #
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (dump.cpp:140), pid=25710, tid=1105717568
#  Error: ShouldNotReachHere()
#
# JRE version: 7.0
# Java VM: Java HotSpot(TM) 64-Bit Server VM (20.0-b01 interpreted mode linux-amd64 compressed oops)
# An error report file with more information is saved as:
# /export/local/ttt/hs_err_pid25710.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp


Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x7c507c];;  VMError::report(outputStream*)+0x114c
V  [libjvm.so+0x7c53e4];;  VMError::report_and_die()+0x2d4
V  [libjvm.so+0x3cd4f6];;  report_vm_error(char const*, int, char const*, char const*)+0x56
V  [libjvm.so+0x414c55];;  MarkObjectsSkippingKlassesOopClosure::do_oop(unsigned int*)+0x15
V  [libjvm.so+0x670893];;  objArrayKlass::oop_oop_iterate_v(oopDesc*, OopClosure*)+0xf3
V  [libjvm.so+0x414938];;  _ZL38mark_object_recursive_skipping_klassesP7oopDesc+0x78
V  [libjvm.so+0x416125];;  MarkCommonReadOnly::do_object(oopDesc*)+0x245
V  [libjvm.so+0x717224];;  ContiguousSpace::object_iterate_from(WaterMark, ObjectClosure*)+0x74
V  [libjvm.so+0x4178d1];;  VM_PopulateDumpSharedSpace::doit()+0x311
V  [libjvm.so+0x7cc74c];;  VM_Operation::evaluate()+0x4c
V  [libjvm.so+0x7cb4f3];;  VMThread::evaluate_operation(VM_Operation*)+0x83
V  [libjvm.so+0x7cbab8];;  VMThread::loop()+0x178
V  [libjvm.so+0x7cbdc0];;  VMThread::run()+0x70
V  [libjvm.so+0x687dc0];;  _ZL10java_startP6Thread+0xf0

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/4e22405d98d6
                                     
2010-12-04
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/4e22405d98d6
                                     
2010-10-20



Hardware and Software, Engineered to Work Together