6989669: Coops: -Xshare:dump causes crash

Temporarily fix to disable compressed oops with CDS

Reviewed-by: dholmes, twisti, kvn, never